--- a/css/style.css
+++ b/css/style.css
@@ -70,44 +70,44 @@ h2 {
 section.pricing {
     background: #007bff;
     background: linear-gradient(to right, #034078, #1282a2);
-  }
-  
-  .pricing .card {
+}
+
+.pricing .card {
     border: none;
     border-radius: 1rem;
     transition: all 0.2s;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-  }
-  
-  .pricing hr {
+}
+
+.pricing hr {
     margin: 1.5rem 0;
-  }
-  
-  .pricing .card-title {
+}
+
+.pricing .card-title {
     margin: 0.5rem 0;
     font-size: 0.9rem;
     letter-spacing: .1rem;
     font-weight: bold;
-  }
-  
-  .pricing .card-price {
+}
+
+.pricing .card-price {
     font-size: 3rem;
     margin: 0;
-  }
-  
-  .pricing .card-price .period {
+}
+
+.pricing .card-price .period {
     font-size: 0.8rem;
-  }
-  
-  .pricing ul li {
+}
+
+.pricing ul li {
     margin-bottom: 1rem;
-  }
-  
-  .pricing .text-muted {
+}
+
+.pricing .text-muted {
     opacity: 0.7;
-  }
-  
-  .pricing .btn {
+}
+
+.pricing .btn {
     font-size: 80%;
     border-radius: 5rem;
     letter-spacing: .1rem;
@@ -115,17 +115,33 @@ section.pricing {
     padding: 1rem;
     opacity: 0.7;
     transition: all 0.2s;
-  }
-  
-  /* Hover Effects on Card */
-  
-  @media (min-width: 992px) {
+}
+
+
+/* Hover Effects on Card */
+
+@media (min-width: 992px) {
     .pricing .card:hover {
-      margin-top: -.25rem;
-      margin-bottom: .25rem;
-      box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+        margin-top: -.25rem;
+        margin-bottom: .25rem;
+        box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
     }
     .pricing .card:hover .btn {
-      opacity: 1;
+        opacity: 1;
     }
-  }
+}
+
+.map-container-6 {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+
+.map-container-6 iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
