--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ h2 {
     width: 100%
 }
 
+.fundo_contato{
+  background-color: #007bff;
+  background-color: linear-gradient(to right, #034078, #1282a2);
+}
+
 @media (min-width: 576px) {
     .que {
         padding: 0px;
