--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ h2 {
     width: 100%
 }
 
-.fundo_contato{
-  background-color: #007bff;
-  background-color: linear-gradient(to right, #034078, #1282a2);
+.fundo_login{
+  background: #007bff;
+  background: linear-gradient(to right, #034078, #1282a2);
 }
 
 @media (min-width: 576px) {
@@ -73,8 +73,8 @@ h2 {
 }
 
 section.pricing {
-    background: #007bff;
-    background: linear-gradient(to right, #034078, #1282a2);
+    background-color: #007bff;
+    background-color: linear-gradient(to right, #034078, #1282a2);
 }
 
 .pricing .card {
