--- a/css/style.css
+++ b/css/style.css
@@ -16,45 +16,9 @@ h2 {
     width: 100%
 }
 
-.fundo_login{
-  background: #007bff;
-  background: linear-gradient(to right, #034078, #1282a2);
-}
-
-@media (min-width: 576px) {
-    .que {
-        padding: 0px;
-    }
-}
-
-@media (min-width: 768px) {
-    .que {
-        padding: 160px;
-    }
-}
-
-@media (min-width: 992px) {
-    .que {
-        padding: 200px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .que {
-        padding: 20px;
-    }
-}
-
-@media (min-width: 1400px) {
-    .que {
-        padding: 20px;
-    }
-}
-
-@media (min-width: 1600px) {
-    .que {
-        padding: 20px;
-    }
+.fundo_login {
+    background: #007bff;
+    background: linear-gradient(to right, #034078, #1282a2);
 }
 
 .map-container-5 {
@@ -150,13 +114,14 @@ section.pricing {
     width: 100%;
     position: absolute;
 }
+
 .search {
     width: 100%;
     position: relative;
     display: flex;
-  }
-  
-  .searchTerm {
+}
+
+.searchTerm {
     width: 100%;
     border: 3px solid #034078;
     border-right: none;
@@ -165,13 +130,13 @@ section.pricing {
     border-radius: 5px 0 0 5px;
     outline: none;
     color: #9DBFAF;
-  }
-  
-  .searchTerm:focus{
+}
+
+.searchTerm:focus {
     color: black;
-  }
-  
-  .searchButton {
+}
+
+.searchButton {
     width: 40px;
     height: 36px;
     border: 1px solid #034078;
@@ -181,33 +146,95 @@ section.pricing {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
-  }
-  
-  /*Resize the wrap to see the search bar change!*/
-  .wrap{
+}
+
+
+/*Resize the wrap to see the search bar change!*/
+
+.wrap {
     width: 30%;
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  .img1{
-    max-width:120px;
-    max-height:120px;
+}
+
+.img1 {
+    max-width: 120px;
+    max-height: 120px;
     width: auto;
     height: auto;
     position: relative;
     left: 28%;
-  }
-  .search2 {
+}
+
+.search2 {
     width: 100%;
     position: relative;
     display: flex;
-  }
-  .wrap2{
+}
+
+.wrap2 {
     width: 30%;
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 60%;
     transform: translate(-50%, -50%);
-  }
+}
+
+.topInicial {
+    width: 100%;
+    height: 450px;
+    background: url(../images/fundo-4.png) no-repeat;
+    background-size: 100%;
+}
+
+.card2 {
+    width: 14rem;
+}
+
+@media(max-width: 1205px) {
+    .topInicial {
+        width: 100%;
+        height: 450px;
+        background: url(../images/TESTE-1.svg) no-repeat;
+        background-size: 100%;
+    }
+    .wrap {
+        width: 70%;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media(max-width: 700px) {
+    .topInicial {
+        width: 100%;
+        height: 450px;
+        background: url(../images/fundo-3.png) no-repeat;
+        background-size: 120%;
+    }
+    .wrap {
+        width: 95%;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .card2 {
+        width: 50rem;
+    }
+}
+
+.topInicial img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    /* -- OR -- */
+    /* width: auto; 
+       height: 100%; */
+}
