--- a/css/style.css
+++ b/css/style.css
@@ -12,49 +12,9 @@ h2 {
     background-color: black;
 }
 
-.que {
-    width: 100%
-}
-
 .fundo_login{
   background: #007bff;
   background: linear-gradient(to right, #034078, #1282a2);
-}
-
-@media (min-width: 576px) {
-    .que {
-        padding: 0px;
-    }
-}
-
-@media (min-width: 768px) {
-    .que {
-        padding: 160px;
-    }
-}
-
-@media (min-width: 992px) {
-    .que {
-        padding: 200px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .que {
-        padding: 20px;
-    }
-}
-
-@media (min-width: 1400px) {
-    .que {
-        padding: 20px;
-    }
-}
-
-@media (min-width: 1600px) {
-    .que {
-        padding: 20px;
-    }
 }
 
 .map-container-5 {
@@ -122,6 +82,60 @@ section.pricing {
     transition: all 0.2s;
 }
 
+.topInicial {
+  width: 100%;
+  height: 450px;
+  background: url(../images/fundo-4.png) no-repeat;
+  background-size: 100%;
+}
+
+.card2 {
+  width: 14rem;
+}
+
+@media(max-width: 1205px) {
+  .topInicial {
+      width: 100%;
+      height: 450px;
+      background: url(../images/TESTE-1.svg) no-repeat;
+      background-size: 100%;
+  }
+  .wrap{
+      width: 70%;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+  }
+}
+
+@media(max-width: 700px) {
+  .topInicial {
+      width: 100%;
+      height: 450px;
+      background: url(../images/fundo-3.png) no-repeat;
+      background-size: 120%;
+  }
+  .wrap{
+      width: 95%;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+  }
+  .card2 {
+      width: 50rem;
+  }
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /* Hover Effects on Card */
 
@@ -135,6 +149,7 @@ section.pricing {
         opacity: 1;
     }
 }
+
 
 .map-container-6 {
     overflow: hidden;
@@ -183,14 +198,7 @@ section.pricing {
     font-size: 20px;
   }
   
-  /*Resize the wrap to see the search bar change!*/
-  .wrap{
-    width: 30%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  
   .img1{
     max-width:120px;
     max-height:120px;
@@ -210,209 +218,4 @@ section.pricing {
     top: 50%;
     left: 60%;
     transform: translate(-50%, -50%);
-  }
-  body:after {
-    content: url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/close.png) url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/loading.gif) url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/prev.png) url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/next.png);
-    display: none;
-  }
-  
-  body.lb-disable-scrolling {
-    overflow: hidden;
-  }
-  
-  .lightboxOverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    background-color: black;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-    opacity: 0.8;
-    display: none;
-  }
-  
-  .lightbox {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    z-index: 10000;
-    text-align: center;
-    line-height: 0;
-    font-weight: normal;
-  }
-  
-  .lightbox .lb-image {
-    display: block;
-    height: auto;
-    max-width: inherit;
-    border-radius: 3px;
-  }
-  
-  .lightbox a img {
-    border: none;
-  }
-  
-  .lb-outerContainer {
-    position: relative;
-    background-color: white;
-    *zoom: 1;
-    width: 250px;
-    height: 250px;
-    margin: 0 auto;
-    border-radius: 4px;
-  }
-  
-  .lb-outerContainer:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .lb-container {
-    padding: 4px;
-  }
-  
-  .lb-loader {
-    position: absolute;
-    top: 43%;
-    left: 0;
-    height: 25%;
-    width: 100%;
-    text-align: center;
-    line-height: 0;
-  }
-  
-  .lb-cancel {
-    display: block;
-    width: 32px;
-    height: 32px;
-    margin: 0 auto;
-    background: url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/loading.gif) no-repeat;
-  }
-  
-  .lb-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 10;
-  }
-  
-  .lb-container > .nav {
-    left: 0;
-  }
-  
-  .lb-nav a {
-    outline: none;
-    background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
-  }
-  
-  .lb-prev, .lb-next {
-    height: 100%;
-    cursor: pointer;
-    display: block;
-  }
-  
-  .lb-nav a.lb-prev {
-    width: 34%;
-    left: 0;
-    float: left;
-    background: url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/prev.png) left 48% no-repeat;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    opacity: 0;
-    -webkit-transition: opacity 0.6s;
-    -moz-transition: opacity 0.6s;
-    -o-transition: opacity 0.6s;
-    transition: opacity 0.6s;
-  }
-  
-  .lb-nav a.lb-prev:hover {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity: 1;
-  }
-  
-  .lb-nav a.lb-next {
-    width: 64%;
-    right: 0;
-    float: right;
-    background: url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/next.png) right 48% no-repeat;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    opacity: 0;
-    -webkit-transition: opacity 0.6s;
-    -moz-transition: opacity 0.6s;
-    -o-transition: opacity 0.6s;
-    transition: opacity 0.6s;
-  }
-  
-  .lb-nav a.lb-next:hover {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity: 1;
-  }
-  
-  .lb-dataContainer {
-    margin: 0 auto;
-    padding-top: 5px;
-    *zoom: 1;
-    width: 100%;
-    -moz-border-radius-bottomleft: 4px;
-    -webkit-border-bottom-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    -moz-border-radius-bottomright: 4px;
-    -webkit-border-bottom-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
-  
-  .lb-dataContainer:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .lb-data {
-    padding: 0 4px;
-    color: #ccc;
-  }
-  
-  .lb-data .lb-details {
-    width: 85%;
-    float: left;
-    text-align: left;
-    line-height: 1.1em;
-  }
-  
-  .lb-data .lb-caption {
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 1em;
-  }
-  
-  .lb-data .lb-number {
-    display: block;
-    clear: left;
-    padding-bottom: 1em;
-    font-size: 12px;
-    color: #999999;
-  }
-  
-  .lb-data .lb-close {
-    display: block;
-    float: right;
-    width: 30px;
-    height: 30px;
-    background: url(https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/images/close.png) top right no-repeat;
-    text-align: right;
-    outline: none;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-    opacity: 0.7;
-    -webkit-transition: opacity 0.2s;
-    -moz-transition: opacity 0.2s;
-    -o-transition: opacity 0.2s;
-    transition: opacity 0.2s;
-  }
-  
-  .lb-data .lb-close:hover {
-    cursor: pointer;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity: 1;
   }
